Fix .thread-info z-index #25

--- a/src/forks/MayhemYDG/General.css
+++ b/src/forks/MayhemYDG/General.css
@@ -87,6 +87,10 @@
  .captcha-input.field {
   width:300px;
 }
+/* Catalog */
+.thread-info {
+  z-index: 4;
+}
 /* Thread Watcher */
 :root.threadwatcher-tree #thread-watcher {
   padding: 0px !important;
